--- a/styles/style.css
+++ b/styles/style.css
@@ -6,3 +6,11 @@
   height: 100%;
   width: 100%;
 }
+
+.swiper-button-next,
+.swiper-button-prev {
+  color: #70e000 !important;
+}
+.swiper-pagination-bullet-active {
+  background-color: #70e000 !important;
+}
